--- a/postgrest.cabal
+++ b/postgrest.cabal
@@ -24,6 +24,23 @@ flag FailOnWarn
   manual:      True
   description: No warnings allowed
 
+library minimal-segfault-ffi
+  default-language:   Haskell2010
+  hs-source-dirs:     minimal-segfault/ffi
+  exposed-modules:    FFI
+  build-depends:      base >= 4 && < 5
+  Extra-libraries:    crypto
+  GHC-Options:        -Wall
+
+library minimal-segfault-lib
+  default-language:   Haskell2010
+  hs-source-dirs:     minimal-segfault/lib
+  exposed-modules:    Lib
+  build-depends:      base >= 4 && < 5
+                    , minimal-segfault-ffi
+  Extra-libraries:    crypto
+  GHC-Options:        -Wall
+
 library
   exposed-modules:    PostgREST.ApiRequest
                       PostgREST.App
@@ -126,6 +143,7 @@ executable postgrest
                     , time                >= 1.6 && < 1.11
                     , wai                 >= 3.2.1 && < 3.3
                     , warp                >= 3.2.12 && < 3.4
+                    , minimal-segfault-lib
   default-language:   Haskell2010
   default-extensions: OverloadedStrings
                       QuasiQuotes
